<resources>
    <string name="app_name">NSI_prospects</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="raison_sociale">Raison Sociale</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="telephone">Téléphone</string>
    <string name="email">Email</string>
    <string name="envoyer">Envoyer</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="cree_un_compte">Cree un compte</string>
    <string name="se_connecter">Se connecter</string>
    <string name="ajouter_un_prospect">Ajouter un prospect</string>

</resources>